# agave

./: .gitignore  Cargo.toml  README.md
.buildkite/invalidator/: _pipeline.sh  pipeline.sh
.config/: nextest.toml
accounts-db/: Cargo.toml
adversary/: Cargo.toml  README.md
adversary/inimica/: Cargo.toml  README.md
adversary/inimica/src/: args.rs  attacks.rs  blockhash_cache.rs  deploy_program.rs  main.rs  programs.rs
adversary/inimica/src/args/: accounts_file.rs  json_rpc_url_args.rs
adversary/inimica/src/attacks/: args.rs  flood_shreds.rs  gossip.rs  program_runtime.rs  turbine.rs
adversary/inimica/src/attacks/flood_shreds/: args.rs  invalid_shreds.rs
adversary/inimica/src/attacks/gossip/: args.rs  flood_sigverify.rs
adversary/inimica/src/attacks/program_runtime/: args.rs  program_cache.rs
adversary/inimica/src/attacks/program_runtime/program_cache/: args.rs  unloaded_program_invocation.rs
adversary/inimica/src/attacks/program_runtime/program_cache/unloaded_program_invocation/: args.rs  loader_v3.rs
adversary/inimica/src/attacks/turbine/: args.rs  flood_sigverify.rs
adversary/inimica/src/deploy_program/: v3.rs
adversary/invalidator-client/: Cargo.toml  README.md
adversary/invalidator-client/src/: args.rs  common.rs  continuous_mode.rs  main.rs
adversary/invalidator-client/src/adversary/: delay_votes.rs  drop_turbine_votes.rs  flood_unused_port.rs  gossip.rs  leader_block.rs  mod.rs  packet_drop.rs  repair.rs  replay.rs  shred_forwarder.rs  tpu.rs
adversary/quic-initial-flooder/: Cargo.toml  README.md
adversary/quic-initial-flooder/src/: main.rs
adversary/scripts/: README.md  continuous-test.sh  invalidator-client-continuous-tests.sh  invalidator-tests.sh  ping-test.sh  repair-tests.sh
adversary/scripts/restart-cluster-by-wen-restart/: main.sh  parse-wen-restart.sh  update-validator-scripts-to-wait-for-supermajority.sh  update-validator-scripts-to-wen-restart-mode.sh
adversary/scripts/testplan/: private-testnet-no-accounts.sh  private-testnet-ping.sh  private-testnet.sh  public-testnet.sh
adversary/src/: accounts_file.rs  adversary_context.rs  adversary_feature_set.rs  auth.rs  block_generator_config.rs  flood_unused_port.rs  flood_worker.rs  gossip.rs  lib.rs  repair.rs  tpu.rs
adversary/src/adversary_feature_set/: replay_stage_attack.rs
adversary/src/adversary_feature_set/replay_stage_attack/: attack_program_config.rs  config_verifiers.rs  large_nop_attack_config.rs  non_existent_accounts_attack_config.rs
banking-bench/src/: main.rs
ci/: buildkite-pipeline.sh  buildkite-solana-private.sh  do-audit.sh  env.sh  run-local.sh  run-sanity.sh  test-pre-rebase-hook.sh  test-sanity.sh  test-stable.sh
ci/common/: shared-functions.sh
ci/stable/: run-local-cluster-partially.sh
core/: Cargo.toml
core/src/: admin_rpc_post_init.rs  banking_simulation.rs  banking_stage.rs  bundle_stage.rs  forwarding_stage.rs  lib.rs  next_leader.rs  replay_stage.rs  scheduler_bindings_server.rs  tpu.rs  validator.rs  voting_service.rs
cost-model/src/: cost_model.rs  transaction_cost.rs
dev-bins/: Cargo.toml
docs/: upstream-sync.md
docs/invalidator/: inimica.md
docs/invalidator-attacks/: README.md  replay-attacks.md
dos/: Cargo.toml
dos/src/: main.rs
entry/src/: entry.rs
gossip/: Cargo.toml
gossip/src/: cluster_info.rs  cluster_info_metrics.rs  contact_info.rs  crds_gossip_pull.rs  crds_value.rs  gossip_service.rs  ping_pong.rs  protocol.rs
ledger/src/: blockstore_processor.rs  leader_schedule_cache.rs  shred.rs  slot_stats.rs
local-cluster/: Cargo.toml
local-cluster/src/: account_util.rs  cluster.rs  cluster_tests.rs  lib.rs  local_cluster.rs  validator_configs.rs
local-cluster/tests/: local_cluster.rs  local_cluster_duplicate_attack.rs  local_cluster_replay_attack.rs
metrics/benches/: metrics.rs
metrics/src/: metrics.rs
multinode-demo/: bootstrap-validator.sh  validator.sh
net-protocol/: Cargo.toml
net-protocol/src/: lib.rs  repair.rs
orchestrator/: Cargo.toml
orchestrator-bin/: Cargo.toml  README.md
orchestrator-bin/src/: args.rs  component.rs  config.rs  control.rs  main.rs
orchestrator/examples/: fake_scheduler.rs  fake_validator.rs
orchestrator/src/: config.rs  lib.rs  main.rs  unix.rs
orchestrator/src/unix/: mod.rs  scheduler.rs  shared.rs
poh/src/: poh_recorder.rs  poh_service.rs  record_channels.rs  transaction_recorder.rs
program-test-panic-repro/: Cargo.toml
program-test-panic-repro/tests/: repro.rs
programs/block-generator-stress-test/: Cargo.toml
programs/block-generator-stress-test-bin/: Cargo.toml
programs/block-generator-stress-test-bin/src/: lib.rs
programs/block-generator-stress-test/src/: lib.rs
programs/client-test-program/: Cargo.toml
programs/client-test-program/src/: lib.rs
programs/sbf/: Cargo.toml
rpc/: Cargo.toml
rpc/src/: lib.rs  rpc.rs  (+2 more)
scheduler-bindings/: Cargo.toml
scheduling-utils/: Cargo.toml
scripts/: pre-rebase-hook.sh  run.sh  slow-rebase.sh
shred-dos/: Cargo.toml
shred-dos/src/: forwarder.rs  gossip.rs  main.rs
specs/: agave-orchestrator.md  telemetry.md
state-loader/: Cargo.toml
state-loader/src/: accounts_creator.rs  accounts_file.rs  cli.rs  error.rs  lib.rs  main.rs  validate_accounts.rs
svm/: Cargo.toml
telemetry/: Cargo.toml
telemetry/src/: lib.rs  shared.rs  unix.rs  windows.rs
transaction-bench/: Cargo.toml  README.md
transaction-bench/src/: accounts_creator.rs  accounts_file.rs  cli.rs  error.rs  lib.rs  main.rs  range.rs
transaction-bench/src/generator/: chunked_accounts_iterator.rs  mints_generator.rs  mod.rs  read_accounts_generator.rs  simple_transfers_generator.rs  transaction_batch_utils.rs  transaction_builder.rs  transaction_generator.rs  transaction_type.rs
transaction-bench/src/network/: connection_worker.rs  connection_workers_scheduler.rs  leader_updater.rs  mod.rs  quic_networking.rs  workers_cache.rs
transaction-bench/src/network/quic_networking/: quic_client_certificate.rs
transaction-bench/tests/: connection_workers_scheduler_test.rs
turbine/: Cargo.toml
validator/: Cargo.toml
(+141 files in other folders)
