[package]
name = "solana-adversary"
description = "adversarial interface and tools"
publish = false
readme = "README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
