[package]
name = "solana-net-protocol"
description = "Solana network protocol support"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-gossip/frozen-abi",
    "solana-hash/frozen-abi",
    "solana-ledger/frozen-abi",
    "solana-pubkey/frozen-abi",
    "solana-signature/frozen-abi",
]

[dependencies]
bincode = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
solana-clock = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi"
] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi"
] }
solana-gossip = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-ledger = { workspace = true }
solana-packet = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
strum_macros = { workspace = true }

[dev-dependencies]
solana-logger = { workspace = true }

[lints]
workspace = true
