[package]
name = "agave-orchestrator-bin"
readme = "../README.md"
documentation = "https://docs.rs/agave-orchestrator-bin"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]

[target."cfg(unix)".dependencies]
agave-orchestrator = { workspace = true }
command-fds = { workspace = true }
nix = { workspace = true, features = ["fs"] }
tokio = { workspace = true, features = ["macros", "net", "process", "rt", "io-util"] }
