[package]
name = "agave-orchestrator-bin"
readme = "../README.md"
documentation = "https://docs.rs/agave-orchestrator-bin"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "agave-orchestrator"
path = "src/main.rs"

[dependencies]

[target."cfg(unix)".dependencies]
agave-orchestrator = { workspace = true }
clap-v4 = { workspace = true, features = ["std", "derive"] }
command-fds = { workspace = true }
nix = { workspace = true, features = ["fs"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "process", "rt", "io-util"] }
