[package]
name = "agave-orchestrator"
readme = "../README.md"
documentation = "https://docs.rs/agave-orchestrator"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]

[target."cfg(unix)".dependencies]
command-fds = { workspace = true }
nix = { workspace = true, features = ["fs"] }
tokio = { workspace = true, features = ["macros", "net", "process", "rt", "io-util"] }
