[package]
description = "Solana Program Test Framework"
name = "solana-program-test-panic-repro"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
