[package]
name = "agave-telemetry"
description = "Agave telemetry"
documentation = "https://docs.rs/agave-telemetry"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
agave-unstable-api = []

[dependencies]
nix = { workspace = true, features = ["fs", "mman"] }
shaq = { workspace = true }
strum = { workspace = true, features = ["derive"] }

[lints]
workspace = true
