[package]
name = "solana-invalidator-inimica"
description = "Runs attacks against the Solana network as a network client"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
clap-v4 = { workspace = true, features = ["derive"] }
futures = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account = { workspace = true }
solana-adversary = { workspace = true }
solana-clap-v3-utils = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-gossip = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-ledger = { workspace = true }
solana-loader-v3-interface = { workspace = true }
solana-logger = { workspace = true }
solana-metrics = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
bincode = { workspace = true }
solana-test-validator = { workspace = true }
