
[package]
name = "solana-sbf-block-generator-stress-test"
description = "Program to stress test replay stage"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "block_generator_stress_test"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
borsh = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-account-info = { workspace = true }
solana-clock = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }

[lints]
workspace = true
