
[package]
name = "solana-sbf-client-test-program"
description = "Program used for transaction-bench client. Currently, only reads the input accounts."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
borsh = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-account-info = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }

[lib]
name = "client_test_program"
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
